--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      </div>
      
  <div class="card"> 
-    <model-viewer camera-controls touch-action="pan-y" skybox-image="../../assets/spruit_sunrise_4k_LDR.jpg" 
+    <model-viewer camera-controls touch-action="pan-y" skybox-image="WebPortal Skybox.jpg" 
                   environment-image="../../shared-assets/environments/spruit_sunrise_1k_HDR.hdr" alt="A 3D model of a sphere reflecting a sunrise" 
                   src="../../shared-assets/models/reflective-sphere.gltf">
      
