--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  <div class="card"> 
     <model-viewer camera-controls touch-action="pan-y" skybox-image="images/WebPortal Skybox.jpg" 
                   environment-image="images/WebPortal Skybox.hdr" alt="A 3D model of a sphere reflecting a sunrise" 
-                  src="Models/Reflective Ball.gltf">
+                  src="Models/emerald_solidwalls_final___1670276847621.glb">
      
      
      <!--<model-viewer loading="eager" src="Models/emerald_solidwalls_final___1670276847621.glb?sound=Sound/NOHO West Rooftop Pool Audio2.mp3" camera-controls
