--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      </div>
      
  <div class="card"> 
-    <model-viewer camera-controls touch-action="pan-y" skybox-image="images/WebPortal Skybox.jpg" 
+    <model-viewer camera-controls touch-action="pan-y" skybox-image="images/WebPortal Skybox4k.jpg" 
                   environment-image="images/WebPortal Skybox1024.hdr" alt="A 3D model of a sphere reflecting a sunrise" 
                   src="Models/scene.gltf">
      
