--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      </div>
      
  <div class="card"> 
+ <div class="centerImage">    
     <model-viewer camera-controls touch-action="pan-y" skybox-image="images/WebPortal Skybox4k.jpg" 
                   environment-image="images/WebPortal Skybox1024.hdr" alt="A 3D model of a sphere reflecting a sunrise" 
                   src="Models/scene.gltf">
@@ -197,8 +198,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     alt="NOHO WEST" auto-rotate-delay="0" ar-scale="auto" camera-controls alt="NOHO WEST"
                     style="z-index: 1; width: 100%; height: 480px; position: static; ">
   
-     </model-viewer>
-     </div> -->   
+     </model-viewer> -->
+     </div>   
      </model-viewer>
         </div>
    
