--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  <div class="card"> 
  <div class="centerImage">    
     <model-viewer camera-controls touch-action="pan-y" skybox-image="images/WebPortal Skybox4k.jpg" 
-                  environment-image="images/WebPortal Skybox1024.hdr" alt="A 3D model of a sphere reflecting a sunrise" 
-                  src="Models/scene.gltf">
+                  environment-image="images/WebPortal Skybox1024.hdr" alt="Web Portal Test" 
+                  loading="eager" src="Models/scene.gltf">
      
      
      <!--<model-viewer loading="eager" src="Models/emerald_solidwalls_final___1670276847621.glb?sound=Sound/NOHO West Rooftop Pool Audio2.mp3" camera-controls
