--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <button slot="ar-button" style="z-index: 9; background-color: #4D008C; border-radius: 8px; border: 1 px solid white; position: absolute; 
                     top: 2px; right: 0; height: 40px; width: auto; ">
 
-                     👆 <b style="color:#FFFFFF;"><strong>EXPLORE AR HERE</strong></b></button>>
+                     👆 <b style="color:#FFFFFF;"><strong>EXPLORE AR HERE</strong></b></button>
      
      
      <!--<model-viewer loading="eager" src="Models/emerald_solidwalls_final___1670276847621.glb?sound=Sound/NOHO West Rooftop Pool Audio2.mp3" camera-controls
