--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  <div class="centerImage">    
   
   <model-viewer camera-controls touch-action="pan-y"  
-                  environment-image="Video/file.mp4" alt="Web Portal Test" 
+                  environment-image="images/WebPortal Skybox1024.hdr" 
                   loading="eager" src="Models/scene.gltf" id="model-viewer" id="reveal" exposure="1" shadow-intensity="1" ar ar-modes="webxr scene-viewer quick-look" ios-src="Models/Nov1PoolParty.reality"
                     alt="NOHO WEST" auto-rotate-delay="0" ar-scale="auto"
                     slot= "progress-bar" style="z-index: 1; width: 100%; height: 480px; position: static; ">
